@@ -53,6 +53,12 @@ List keys matching glob, or list all keys if no glob given.
 \fBlist branches\fP
 List all branches.
 .TP
+\fBlist unknown\fP
+List files in working directory, but not in manifest or work list.
+.TP
+\fBlist ignored\fP
+List files intentionally ignored due to the ignore_file hook.
+.TP
 \fBfetch\fP \fI[URL] [groupname]\fP
 Fetch recent packets from network servers. Does not read public
 or private key packets; use the \fBread\fP command instead.
