@@ -1,3 +1,8 @@
+2003-09-24  graydon hoare  <graydon@redhat.com>
+
+	* commands.cc (list): List unknown, ignored files.
+	* monotone.texi, monotone.1: Document.
+
 2003-09-24  graydon hoare  <graydon@pobox.com>
 
 	* commands.cc (queue_edge_for_target_ancestor): Queue the
